--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="utf-8">
     <title>TODO List</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=1024"/>
     <meta name="description" content="">
     <meta name="author" content="">
 
@@ -11,378 +11,29 @@
     <!-- Le styles -->
     <link href="css/bootstrap.css" rel="stylesheet">
 
-
     <link href="http://fonts.googleapis.com/css?family=Days+One" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css">
 
-
     <link href="css/bootstrap-responsive.css" rel="stylesheet">
+    <link href="css/admin.css" rel="stylesheet">
     <link href="css/general.css" rel="stylesheet">
     <link href="css/jquery.gritter.css" rel="stylesheet">
-
-    <script type="text/javascript" src="js/jquery.tinyscrollbar.min.js"></script>
     <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
+    <script src="http://code.jquery.com/jquery-latest.js"></script>
+    <script src="js/underscore-min.js"></script>
+    <script src="js/backbone-min.js"></script>
+    <script src="js/jquery.gritter.min.js"></script>
+    <script src="js/routes.js"></script>
+    <script src="js/views.js"></script>
+    <script src="js/models.js"></script>
+    <script src="js/general.js"></script>
+    <script src="js/bootstrap.js"></script>
 </head>
 <body>
-<div class="tall">
-    <div class="row-fluid" style="">
-        <div class="navbar navbar-fixed-top">
-            <div class="navbar-inner">
-                <div class="container-fluid">
-                    <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-                    </a>
-                    <a class="brand" href="#">TODOList</a>
-                    <ul class="nav pull-right">
-                        <li class="dropdown">
-                            <a class="dropdown-toggle" data-toggle="dropdown" href="#about"><i
-                                    class="icon-envelope icon-white"></i> Notificaciones <span id="num-notifications"
-                                                                                               class="badge badge-important">0</span></a>
-
-                            <div id="bar-notifications" class="dropdown-menu comprimed" role="menu"
-                                 aria-labelledby="dLabel"></div>
-                        </li>
-                        <li class="divider-vertical"></li>
-
-                        <li><a href="/logout">Logout</a></li>
-                        <li><a href="#" ><i class="icon-cog icon-white"></i>Opciones</a></li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="container-fluid tall" style="height: 80%;">
-        <div class="row-fluid tall">
-            <div class="span3 tall">
-                <div class="sidewell todoLists tall">
-                    <div id="listsWell"></div>
-                    <div class="container-fluid listsAddDelete">
-                        <div class="row-fluid">
-                            <button href="#newList" class="btn btn-primary" data-toggle="modal">Nueva lista</button>
-
-                            <button id="deleteList" class="btn btn-danger">Borrar lista</button>
-                            </div>
-                        <div class="row-fluid">
-                        <button id="exportList" class="btn btn-primary">Exportar Listas</button>
-                            </div>
-                    </div>
-                </div>
-            </div>
-            <div class="span9 tall">
-                <div class=" well todoTasks tall">
-                    <div style="padding: 10px">
-                        <div class="row-fluid">
-                            <div id="taskListTitle"></div>
-                            <div id="taskList"></div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="row-fluid" style="
-    margin-top: 10px;
-">
-        <div class="span12" style="float: left">
-            <footer style="bottom: 0">
-                <div class="footerblk">
-                    <p style="padding:20px; margin: 0">© 2012 <b> TodoList</b><span class="pull-right">IS2</span></p>
-                </div>
-            </footer>
-        </div>
-    </div>
+<div class="tall" id="content">
 </div>
-<div id="taskOptions" class="modal hide fade" tabindex="-1" role="dialog"
-     aria-labelledby="taskOptions" aria-hidden="true">
-    <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-        <h3 id="taskOptionsLabel">Titulo</h3>
-    </div>
-    <div class="modal-body">
-        <form class="taskOptionsForm form-horizontal">
-            <div class="control-group">
-                <label class="control-label" for="inputTitle">Título</label>
-
-                <div class="controls">
-                    <input type="text" id="inputTitle" placeholder="Titulo">
-                </div>
-            </div>
-            <div class="control-group">
-                <label class="control-label" for="inputDescription">Descripción</label>
-
-                <div class="controls">
-                    <textarea rows="3" id="inputDescription" placeholder="Descripcion"></textarea>
-                </div>
-            </div>
-            <div class="control-group">
-                <label class="control-label" for="inputLimitDate">Fecha Límite</label>
-
-                <div class="controls">
-                    <input type="text" class="span2" id="inputLimitDay" placeholder="0" size="1"
-                           maxlength="2" max="31">
-                    <input type="text" class="span2" id="inputLimitMonth" placeholder="0" size="1"
-                           maxlength="2" max="12">
-                    <input type="text" class="span2" id="inputLimitYear" placeholder="0" size="1"
-                           maxlength="4">
-                    (0/0/0=sin fecha limite)
-                </div>
-            </div>
-            <div class="control-group">
-                <label class="control-label" for="inputExpectedDays">Dias esperados</label>
-
-                <div class="controls">
-                    <input type="text" class="span3" id="inputExpectedDays" placeholder="0">
-                    dias (0=sin dias esperados)
-                </div>
-            </div>
-            <div class="control-group">
-                <label class="control-label" for="inputCompleted">Completado</label>
-
-                <div class="controls">
-                    <input type="checkbox" id="inputCompleted">
-                </div>
-            </div>
-        </form>
-    </div>
-    <div class="modal-footer">
-        <a class="btn btn-danger pull-left" id="removeButton">Borrar Tarea</a>
-        <a class="btn" data-dismiss="modal" aria-hidden="true">Cerrar</a>
-        <a class="btn btn-primary" id="submitButton">Guardar cambios</a>
-    </div>
-</div>
-<!-- Modal -->
-<div id="newList" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="newList"
-     aria-hidden="true">
-    <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-        <h3 id="newListTitle">Introduzca el nombre de la nueva lista</h3>
-    </div>
-    <div class="modal-body">
-        <form class="newListForm form-horizontal">
-            <div class="control-group">
-                <label class="control-label" for="inputListName">Nombre</label>
-
-                <div class="controls">
-                    <input type="text" id="inputListName" placeholder="Nombre">
-                </div>
-            </div>
-        </form>
-    </div>
-    <div class="modal-footer">
-        <button class="btn" data-dismiss="modal" aria-hidden="true">Cerrar</button>
-        <button class="btn btn-primary" id="submitNewListButton">Guardar</button>
-    </div>
-</div>
-<!-- Modal -->
-<div id="newTaskModal" class="modal hide fade" tabindex="-1" role="dialog"
-     aria-labelledby="newTaskModal" aria-hidden="true">
-    <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-        <h3 id="newTaskTitle">Indroduzca el nombre de nueva tarea</h3>
-    </div>
-    <div class="modal-body">
-        <form class="newTaskForm form-horizontal">
-            <div class="control-group">
-                <label class="control-label" for="inputTaskName">Nombre</label>
-
-                <div class="controls">
-                    <input type="text" id="inputTaskName" placeholder="Nombre">
-                </div>
-            </div>
-        </form>
-    </div>
-    <div class="modal-footer">
-        <button class="btn" data-dismiss="modal" aria-hidden="true">Cerrar</button>
-        <button class="btn btn-primary" id="submitNewTaskButton">Guardar</button>
-    </div>
-</div>
-<script src="http://code.jquery.com/jquery-latest.js"></script>
-<script src="js/underscore-min.js"></script>
-<script src="js/backbone-min.js"></script>
-<script type="text/template" id="taskRowTemplate">
-    <% _.each(tasks, function(task) { %>
-    <div class="box">
-        <div class="task <% if (task.completed) {%>completed<%}else{%>incompleted<%}%>" data-toggle="modal"
-             data-name="<%= task.name %>">
-
-            <div>
-                <h3><%= task.name %></h3>
-                <h4><%= task.limitDate %></h4>
-            </div>
-
-        </div>
-        <div data-placement="right" rel="tooltip" title="<%= task.limitDate %>" role="button"
-             data-name="<%= task.name%>" class="task-desc task"
-             data-toggle="modal">
-            <div class="container-fluid header">
-            <div class="row-fluid">
-                <div class="span9"><div class="name"><%= task.name %></div></div>
-                <div class="span3"><a class="favicon pull-right <% if (task.favorite) { %> favorite <% } %>"></a></div>
-            </div>
-            <div class="row-fluid">
-            <div class="desc"><%= task.description %></div>
-               </div>
-                </div>
-        </div>
-    </div>
-    <% }); %>
-    <div class="box">
-        <div href="#newTaskModal" role="button" class="task addTask"
-             data-toggle="modal">
-            <div>
-                <h1 style="font-size : 50px;">+</h1>
-            </div>
-            </a>
-        </div>
-    </div>
-
-</script>
-<script type="text/template" id="taskRowTemplate_Fav">
-    <% _.each(tasks, function(task) { %>
-    <div class="box">
-        <div class="task <% if (task.completed) {%>completed<%}else{%>incompleted<%}%>" data-toggle="modal"
-             data-name="<%= task.name %>">
-
-            <div>
-                <h3><%= task.name %></h3>
-                <h4><%= task.limitDate %></h4>
-            </div>
-
-        </div>
-        <div data-placement="right" rel="tooltip" title="<%= task.limitDate %>" role="button"
-             data-name="<%= task.name%>" class="task-desc task"
-             data-toggle="modal">
-            <div class="container-fluid header">
-                <div class="row-fluid">
-                    <div class="span9"><div class="name"><%= task.name %></div></div>
-                </div>
-                <div class="row-fluid">
-                    <div class="desc"><%= task.description %></div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <% }); %>
-
-</script>
-<script type="text/template" id="listsNavbar">
-    <div class="tall" style="padding:10px">
-        <div class="listsLinks">
-            <ul class="nav nav-list">
-                <% _.each(lists, function(list) { %>
-                <li><a class="listElement" href="#"><%= list.name %><input type="checkbox" class="pull-right"/></a>
-                <li>
-                    <% }); %>
-            </ul>
-        </div>
-    </div>
-</script>
-<script type="text/template" id="notificationList">
-    <ul id="notifications-list">
-        <% _.each(notifications, function(notification) { %>
-        <li class="notification">
-            <a style="width: 400px">
-                <div style="background: wheat;"><b><%= notification.user %></b></div>
-                <p class="description">Te ha enviado una lista de tareas</p>
-
-                <p>
-                    <% _.each(notification.taskList,function(task){ %>
-                    <span class="label label-info"><%= task %></span>
-                    <% }); %>
-                </p>
-
-                <p>
-                    <button class="btn btn-mini btn-primary tiny accept" type="button">Aceptar
-                    </button>
-                    <button class="btn btn-mini btn-danger tiny cancel" type="button">Rechazar
-                    </button>
-                </p>
-            </a>
-        </li>
-        <% }); %>
-    </ul>
-</script>
-<script src="js/jquery.gritter.min.js"></script>
-<script src="js/views.js"></script>
-<script src="js/models.js"></script>
-<script src="js/general.js"></script>
-<script src="js/bootstrap.js"></script>
-<script type="text/javascript">
-
-    $('#exportList').click(function () {
-        exportLists();
-    });
-
-</script>
-<script src="/socket.io/socket.io.js"></script>
-<script type="text/javascript">
-    var socket = io.connect('http://localhost');
-    $('#num-notifications').click(function () {
-        //socket.emit('newTask', {user:'peneanal', taskList:["44234", "fdsfsf"]});
-    });
-
-    var notifications = [];
-
-    socket.on('notification', function (notis) {
-        notifications = notis;
-        if (notis.length > 0) {
-            newNotification(notis.length);
-        }
-        updateBar();
-        updateContent();
-        updateHandler();
-    });
-
-    function updateBar() {
-        $('#num-notifications').text(notifications.length);
-    }
-
-    function updateContent() {
-        var template = _.template($("#notificationList").html(), {notifications:notifications});
-        console.log(template);
-        $('#bar-notifications').html(template);
-    }
-
-    function updateHandler() {
-        $('#notifications-list li button').click(function () {
-            var index = $(this).parents('li').index();
-            var ObjID = notifications[index].listId;
-            if ($(this).hasClass('accept')) {
-                socket.emit('addList', ObjID);
-                notifications.splice(index, 1);
-            }
-            else {
-                socket.emit('deleteList', ObjID);
-                notifications.splice(index, 1);
-                $(this).parents('.notification').remove();
-            }
-            updateBar();
-            updateContent();
-            updateHandler();
-        });
-    }
-</script>
-
-<script>
-    function newNotification(numNot) {
-        var unique_id = $.gritter.add({
-            // (string | mandatory) the heading of the notification
-            title:'Tienes notificaciones nuevas',
-            // (string | mandatory) the text inside the notification
-            text:numNot + ((numNot > 1) ? ' usuarios te enviaron un conjunto de tareas.' : ' usuario te envió un conjunto de tareas'),
-            // (string | optional) the image to display on the left
-            image:'img/notification.png',
-            // (bool | optional) if you want it to fade out on its own or just sit there
-            sticky:false,
-            // (int | optional) the time you want it to be alive for before fading out
-            time:'4000',
-            // (string | optional) the class name you want to apply to that specific message
-            class_name:'my-sticky-class'
-        });
-    }
-</script>
-
 </body>
 </html>
