--- a/public/tpl/index.html
+++ b/public/tpl/index.html
@@ -177,7 +177,7 @@
             </div>
 
         </div>
-        <div data-placement="right" rel="tooltip" title="<%= task.limitDate %>" role="button"
+        <div data-placement="top" rel="tooltip" title="<%= task.limitDate %>" role="button"
              data-name="<%= task.name%>" class="task-desc task"
              data-toggle="modal">
             <div class="container-fluid header">
