tareas expiradas y arreglo

--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,7 @@
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
     <script src="http://code.jquery.com/jquery-latest.js"></script>
+    <script src="js/date.format.js"></script>
     <script src="js/underscore-min.js"></script>
     <script src="js/backbone-min.js"></script>
     <script src="js/jquery.gritter.min.js"></script>
