--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,7 @@
     <script src="js/date.format.js"></script>
     <script src="js/underscore-min.js"></script>
     <script src="js/backbone-min.js"></script>
+    <script src="js/backbone.dualStorage.js"></script>
     <script src="js/jquery.gritter.min.js"></script>
     <script src="js/routes.js"></script>
     <script src="js/views.js"></script>
