--- a/public/tpl/index.html
+++ b/public/tpl/index.html
@@ -8,6 +8,7 @@
                         </a>
                         <a class="brand" href="#">TODOList</a>
                         <ul class="nav pull-right">
+                            <li><a onclick="undoLastChange()">Deshacer</a></li>
                             <li class="dropdown">
                                 <a class="dropdown-toggle" data-toggle="dropdown" href="#about"><i
                                         class="icon-envelope icon-white"></i> Notificaciones <span
@@ -18,7 +19,7 @@
                                      aria-labelledby="dLabel"></div>
                             </li>
                             <li class="divider-vertical"></li>
-
+                        	<li><a onclick="changeOfflineMode()">Modo Offline</a></li>
                             <li><a href="/logout">Logout</a></li>
                             <li><a href="/#/admin/user"><i class="icon-cog icon-white"></i>Opciones</a></li>
                         </ul>
