--- a/public/tpl/index.html
+++ b/public/tpl/index.html
@@ -28,7 +28,7 @@
         </div>
         <div class="container-fluid" style="height: 80%">
             <div class="row-fluid tall">
-                <div class="span3 sidewell tall">
+                <div class="span3 sidewell tall shadowed">
                     <div class="todoLists tall">
                         <div id="listsWell" class="tall"></div>
                         <div class="container-fluid listsAddDelete">
@@ -43,7 +43,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="span9 tall">
+                <div class="span9 tall shadowed">
                     <div class=" well todoTasks tall">
                         <div style="padding: 10px">
                             <div class="row-fluid">
