--- a/public/index.html
+++ b/public/index.html
@@ -18,12 +18,14 @@
     <link href="css/admin.css" rel="stylesheet">
     <link href="css/general.css" rel="stylesheet">
     <link href="css/jquery.gritter.css" rel="stylesheet">
+    <link href="css/datepicker.css" rel="stylesheet">
     <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
     <script src="http://code.jquery.com/jquery-latest.js"></script>
     <script src="js/date.format.js"></script>
+    <script src="js/bootstrap-datepicker.js"></script>
     <script src="js/underscore-min.js"></script>
     <script src="js/backbone-min.js"></script>
     <script src="js/backbone.dualStorage.js"></script>
