arreglado el exportar listas

--- a/public/tpl/index.html
+++ b/public/tpl/index.html
@@ -285,7 +285,7 @@
         <div class="listsLinks">
             <ul class="nav nav-list">
                 <% _.each(lists, function(list) { %>
-                <li><a class="listElement" href="#"><%= list.name %><input type="checkbox" class="pull-right"/></a>
+                <li><a class="listElement" href="#"><%= list.name %><input type="checkbox" class="pull-right checkExport"/></a>
                 <li>
                     <% }); %>
             </ul>
