Cambiado el deshacer para que aparezca como popup
Falta el borrado de listas y tareas. El borrado de los datos se
realiza, es decir por ejemplo al borrar una tarea los datos de la tarea
se borran y al hacer el get de la tarea devuelve null pero al hacer el
get de la lista de tareas aparece el identificador

--- a/public/tpl/index.html
+++ b/public/tpl/index.html
@@ -16,7 +16,6 @@
                             <li><a href="#shareModal" data-toggle="modal"><i class="icon-share icon-white"></i>Compartir</a>
                             </li>
                             <li class="divider-vertical"></li>
-                            <li><a onclick="undoLastChange()">Deshacer</a></li>
                             <li class="dropdown">
                                 <a class="dropdown-toggle" data-toggle="dropdown" href="#about"><i
                                         class="icon-envelope icon-white"></i> Notificaciones <span
@@ -70,6 +69,7 @@
         </div>
     </div>
 </div>
+<div id="alert-area"></div>
 <div id="taskOptions" class="modal hide fade" tabindex="-1" role="dialog"
      aria-labelledby="taskOptions" aria-hidden="true">
     <div class="modal-header">
