--- a/public/tpl/index.html
+++ b/public/tpl/index.html
@@ -84,7 +84,7 @@
         <h3 id="taskOptionsLabel">Titulo</h3>
     </div>
     <div class="modal-body">
-        <form class="taskOptionsForm form-horizontal">
+        <form action="#" class="taskOptionsForm form-horizontal">
             <div class="control-group">
                 <label class="control-label" for="inputTitle">Título</label>
 
@@ -140,7 +140,7 @@
         <h3 id="newListTitle">Introduzca el nombre de la nueva lista</h3>
     </div>
     <div class="modal-body">
-        <form class="newListForm form-horizontal">
+        <form action="#" class="newListForm form-horizontal">
             <div class="control-group">
                 <label class="control-label" for="inputListName">Nombre</label>
 
@@ -184,7 +184,7 @@
         <h3 id="newTaskTitle">Indroduzca el nombre de nueva tarea</h3>
     </div>
     <div class="modal-body">
-        <form class="newTaskForm form-horizontal">
+        <form action="#" class="newTaskForm form-horizontal">
             <div class="control-group">
                 <label class="control-label" for="inputTaskName">Nombre</label>
 
