--- a/public/tpl/admin-tasks.html
+++ b/public/tpl/admin-tasks.html
@@ -49,6 +49,10 @@
                 <div class="page-header">
                     <h1>Tareas</h1>
                 </div>
+                <div class="alert alert-success" style="display: none">
+                    Guardado con éxito
+                    <a class="close" data-dismiss="alert" href="#">&times;</a>
+                </div>
                 <div class="row-fluid">
                     <div class="span6">
                         <form id="tasks-form" class="form-horizontal">
@@ -125,8 +129,15 @@
             var default_list =  $('#select02').val();
             var tasks_per_page = $('#select01').val();
             currentUser.set({settings:{default_list:default_list, tasks_per_page:tasks_per_page}});
-            currentUser.save();
+            currentUser.save({},{
+                success : showAlert
+            });
 
+        }
+
+        function showAlert(){
+            $(".alert").fadeIn("fast");
+            $(".alert").delay(4000).fadeOut("slow");
         }
     </script>
 
