--- a/public/tpl/admin-user.html
+++ b/public/tpl/admin-user.html
@@ -50,6 +50,10 @@
             <div class="page-header">
                 <h1>Usuario</h1>
             </div>
+            <div class="alert alert-success" style="display: none">
+                Guardado con éxito
+                <a class="close" data-dismiss="alert" href="#">&times;</a>
+            </div>
             <div class="row-fluid">
                 <div class="span6">
                     <form class="form-horizontal" onsubmit="save(); return false">
@@ -179,7 +183,9 @@
         var country = $('#input-country').val();
         var city = $('#input-city').val();
         currentUser.set({name:name, surname:surname, email:email, country:country, city:city});
-        currentUser.save();
+        currentUser.save({},{
+            success : showAlert
+        });
     }
 
     function savePassword() {
@@ -207,6 +213,12 @@
             }
         });
     });
+    $(".alert").alert();
+
+    function showAlert(){
+        $(".alert").fadeIn("fast");
+        $(".alert").delay(4000).fadeOut("slow");
+    }
 
 </script>
 
