añadir tarea con tap

--- a/public/tpl/index.html
+++ b/public/tpl/index.html
@@ -262,7 +262,7 @@
     </div>
     <% }); %>
     <div class="box">
-        <div href="#newTaskModal" role="button" class="task addTask"
+        <div id="newTaskButton" href="#newTaskModal" role="button" class="task addTask"
              data-toggle="modal">
             <div>
                 <h1 style="font-size : 50px;">+</h1>
