arreglando bug de tap... otra vez

--- a/public/tpl/index.html
+++ b/public/tpl/index.html
@@ -262,8 +262,7 @@
     </div>
     <% }); %>
     <div class="box">
-        <div id="newTaskButton" href="#newTaskModal" role="button" class="task addTask"
-             data-toggle="modal">
+        <div id="newTaskButton" role="button" class="task addTask">
             <div>
                 <h1 style="font-size : 50px;">+</h1>
             </div>
