envio de emails y deshabilitar compartir cuando esta offline

--- a/public/tpl/index.html
+++ b/public/tpl/index.html
@@ -20,7 +20,7 @@
                                     <i class="status online"/> Online</a></li>
                         </ul>
                         <ul class="nav pull-right">
-                            <li><a href="#shareModal" data-toggle="modal"><i class="icon-share icon-white"></i>Compartir</a>
+                            <li><a id="buttonShare" href="#shareModal" data-toggle="modal"><i class="icon-share icon-white"></i>Compartir</a>
                             </li>
                             <li class="divider-vertical"></li>
                             <li class="dropdown">
