--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,8 @@
 
     <link href="http://fonts.googleapis.com/css?family=Days+One" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css">
+    <link href="http://code.jquery.com/ui/1.9.2/themes/base/jquery-ui.css" rel="stylesheet" type="text/css">
+
 
     <link href="css/bootstrap-responsive.css" rel="stylesheet">
     <link href="css/admin.css" rel="stylesheet">
@@ -24,6 +26,7 @@
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
     <script src="http://code.jquery.com/jquery-latest.js"></script>
+    <script src="http://code.jquery.com/ui/1.9.2/jquery-ui.js"></script>
     <script src="js/date.format.js"></script>
     <script src="js/bootstrap-datepicker.js"></script>
     <script src="js/underscore-min.js"></script>
