--- a/public/tpl/index.html
+++ b/public/tpl/index.html
@@ -69,7 +69,7 @@
                                 </div>
                             </div>
                             <div id="alert-area"></div>
-                            <div id="taskList"></div>
+                            <ul id="taskList"></ul>
                         </div>
                     </div>
                 </div>
@@ -227,7 +227,7 @@
 </div>
 <script type="text/template" id="taskRowTemplate">
     <% _.each(tasks, function(task) { %>
-    <div class="box">
+    <li class="box">
         <div class="task <% if (task.completed) {%>
         completed
         <%}else{ if (new Date(task.limitDate).valueOf() >= (new Date().valueOf() + 86400)){%>
@@ -259,7 +259,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </li>
     <% }); %>
     <div class="box">
         <div id="newTaskButton" role="button" class="task addTask">
@@ -280,7 +280,7 @@
 </script>
 <script type="text/template" id="taskRowTemplate_Fav">
     <% _.each(tasks, function(task) { %>
-    <div class="box">
+    <li class="box">
         <div class="task <% if (task.completed) {%>
         completed
         <%}else{ if (new Date(task.limitDate).valueOf() >= (new Date().valueOf() + 86400)) {%>
@@ -310,7 +310,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </li>
     <% }); %>
 
 </script>
